# pado

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT_NOTES.md  LICENSE  README.md  environment.devenv.yml  environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  run_pytests.yaml
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: annotations.rst  collections.rst  dataset.rst  images.rst  io.rst  metadata.rst  mock.rst  predictions.rst  settings.rst  shutil.rst  types.rst
docs/source/api/annotations/: annotation.rst  formats.rst  loaders.rst  providers.rst
docs/source/api/images/: ids.rst  image.rst  providers.rst  tiles.rst  utils.rst
docs/source/api/io/: files.rst  paths.rst  store.rst
docs/source/api/metadata/: providers.rst
docs/source/api/predictions/: providers.rst  proxy.rst  writers.rst
pado/: README.md  __init__.py  __main__.py  _cli.py  _compat.py  _logging.py  _repr.py  _test_source.py  _version.py  annotations.py  anonymize.py  collections.py  create.py  dataset.py  datasource.py  fileutils.py  images.py  itertools.py  metadata.py  mock.py  pyproject.toml  registry.py  resource.py  settings.py  setup.cfg  setup.py  shutil.py  structure.py  transporter.py  types.py  utils.py
pado/annotations/: __init__.py  annotation.py  formats.py  loaders.py  providers.py  utils.py
pado/ext/: testsource.py
pado/image/: __init__.py  images.py  providers.py  utils.py
pado/images/: __init__.py  ids.py  image.py  providers.py  tiles.py  utils.py
pado/img/: __init__.py  _base.py  _impl_openslide.py  _impl_tifffile.py  utils.py
pado/io/: checksum.py  files.py  paths.py  store.py
pado/meta/: store.py
pado/metadata/: __init__.py  providers.py  store.py
pado/pado/: __init__.py  dataset.py  datasource.py  fileutils.py  schema.py  structure.py
pado/pado/ext/: readme.md
pado/pado/tests/: conftest.py  test_dataset.py
pado/predictions/: providers.py  proxy.py  writers.py
pado/tests/: conftest.py  test_annotations.py  test_dataset.py  test_fsspec_support.py  test_images.py  test_io_files.py  test_itertools.py  test_main.py  test_metadata.py  test_prediction_writer.py  test_providers.py  test_settings.py  test_storage.py  test_structure.py
pado/util/: files.py  paths.py  store.py
