[metadata]
name = pado
url = https://github.com/Bayer-Group/pado
download_url = https://github.com/Bayer-Group/pado
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.7
install_requires =
    dynaconf
    fsspec
    geojson-pydantic
    itsdangerous
    numpy
    orjson
    pandas
    platformdirs
    pyarrow
    pydantic
    shapely
    tifffile>=2021.6.6
    tiffslide>=1.0.0
    toml
    tqdm
    typing_extensions; python_version < '3.10'
build_requires =
    setuptools_scm
include-package-data = True

[options.package_data]
pado = py.typed

[options.extras_require]
cli =
    rich
    typer
create =
    opencv-python-headless
dev =
    mypy
    pytest>=6
    pytest-cov
    pre_commit==2.19.0
    black=22.1.0
    isort=5.10.1
    flake8=4.0.1
docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    pado = pado.__main__:cli
    pado-transporter = pado.transporter:cli_main


[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
plugins =
    pydantic.mypy

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-pandera.*]
ignore_missing_imports = True

[mypy-fsspec.*]
ignore_missing_imports = True

[mypy-pyarrow.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-zarr.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True
