[metadata]
name = pado
url = https://github.com/Bayer-Group/pado
download_url = https://github.com/Bayer-Group/pado
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
license = BSD
license_file = LICENSE
description = cloud-native dataset library for accessing histopathological datasets
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.7
install_requires =
    dynaconf
    fsspec
    geojson-pydantic
    itsdangerous
    numpy>=1.21
    orjson
    pandas
    platformdirs
    pyarrow
    pydantic
    shapely
    tifffile>=2021.6.6
    tiffslide>=1.7.0
    toml
    tqdm
    typing_extensions>=4.0
build_requires =
    setuptools_scm

[options.packages.find]
exclude = "*/tests/*"

[options.package_data]
pado = py.typed

[options.extras_require]
cli =
    rich>=12
    typer
create =
    opencv-python-headless
dev =
    aiohttp
    requests
    mypy
    pytest>=6
    pytest-cov
    pre_commit
docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    pado = pado.__main__:cli
    pado-transporter = pado.transporter:cli_main


[mypy]
python_version = 3.8
plugins =
    pydantic.mypy
exclude =
    (?x)(
    ^venv|
    ^build|
    ^docs|
    tests|
    ^_stash|
    _version.py|
    setup.py
    )
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true

[mypy-cv2.*]
ignore_missing_imports = True

[mypy-dynaconf.*]
ignore_missing_imports = True

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-pandera.*]
ignore_missing_imports = True

[mypy-orjson.*]
ignore_missing_imports = True

[mypy-fsspec.*]
ignore_missing_imports = True

[mypy-pyarrow.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-tifffile.*]
ignore_missing_imports = True

[mypy-toml.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-zarr.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True
