[metadata]
name = pado
url = https://github.com/Bayer-Group/pado
download_url = https://github.com/Bayer-Group/pado
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
license = BSD
license_file = LICENSE
description = cloud-native dataset library for accessing histopathological datasets
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.7
install_requires =
    dynaconf
    fsspec
    geojson-pydantic
    itsdangerous
    numpy>=1.21
    orjson
    pandas
    platformdirs
    pyarrow
    pydantic
    shapely
    tifffile>=2021.6.6
    tiffslide>=1.7.0
    toml
    tqdm
    typing_extensions>=4.0
build_requires =
    setuptools_scm

[options.packages.find]
exclude = "*/tests/*"

[options.package_data]
pado = py.typed

[options.extras_require]
cli =
    rich>=12
    typer
create =
    opencv-python-headless
dev =
    aiohttp
    requests
    mypy
    pytest>=6
    pytest-cov
    pre_commit
docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    pado = pado.__main__:cli
    pado-transporter = pado.transporter:cli_main
