[metadata]
name = pado
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
url = https://github.com/Bayer-Group/pado
classifiers =
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pycrypto
    paramiko
    pandas
    pyodbc
    joblib
    pysmb
    argh
    JPype1>=1.0.1
    pyarrow
    importlib_resources
    toml
    dynaconf>=3,!=3.1.0

[options.package_data]


