[metadata]
name = pado
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
url = https://github.com/Bayer-Group/pado
classifiers =
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.8
install_requires =
    dynaconf>=3,!=3.1.0
    importlib_resources; python_version < '3.8'
    JPype1>=1.0.1
    pandas
    pyarrow
    toml
    dynaconf>=3,!=3.1.0
build_requires =
    setuptools_scm

[options.package_data]


